# SSP

./: .gitignore  meson.build
data/input/: 500.ssp  51.ssp  ins.ssp
src/main/ssp/: Agent.h  GSA.h  Instance.h  Io.h
src/main/ssp/execs/: Coords.cpp  Eval.cpp  Populate.cpp  Read.cpp
